# docs/api/openapi.json
@@ -7553,7 +7553,8 @@
       },
       "AssigneesRequest": {
         "required": [
-          "userIds"
+          "userIds",
+          "rowVersion"
         ],
         "type": "object",
         "properties": {
@@ -7566,6 +7567,12 @@
               "type": "string",
               "format": "uuid"
             }
+          },
+          "rowVersion": {
+            "type": [
+              "null",
+              "string"
+            ]
           }
         }
       },
